<resources>
    <string name="app_name">ToShow</string>
    <string name="permission_camera_rationale">needs Camera permissions.</string>
    <string name="button_allow">allow</string>
    <string name="button_deny">deny</string>
    <string name="permission_camera_denied">Permission Camera denied</string>
    <string name="permission_camera_neverask">Permission Camera never ask</string>
    <string name="pick_a_picture">Click to Pick a Picture</string>

    <string name="permission_tip">App Tips</string>
    <string name="permission_message">To ensure ToShow works properly, the app will need storage permission.</string>
    <string name="permission_denied_tip">App Warning</string>
    <string name="permission_denied_message">The storage permission is denied, and ToShow is not work,please go to Settings to grant the storage permission.</string>
    <string name="permission_go_on">Go on</string>
    <string name="permission_go_to_setting">Go to Settings</string>
    <string name="permission_cancel">Cancel</string>

    <string name="photo_editor_open">Open</string>
    <string name="photo_editor_open_photo_title">Open photo</string>
    <string name="photo_editor_done">Done</string>
    <string name="photo_editor_share">Share</string>
    <string name="photo_editor_clear">Clear</string>
    <string name="photo_editor_done_button_description">Save photo and exit</string>
    <string name="photo_editor_cancel">Cancel</string>

    <string name="photo_edit_crop">Crop</string>
    <string name="photo_edit_rotate">Rotate</string>
    <string name="photo_edit_mosaic">Mosaic</string>
    <string name="photo_edit_text">Text</string>
    <string name="photo_edit_warp">Warp</string>
    <string name="photo_edit_tune_image">Tune Image</string>
    <string name="photo_edit_filter">Photo Filter</string>
    <string name="photo_edit_frame">Frames</string>
    <string name="photo_edit_scrawl">Scrawl</string>
    <string name="add_text_bottom_font">font</string>
    <string name="add_text_bottom_color">color</string>
    <string name="add_text_bottom_add">add text</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="progress_dialog_saving">Saving...</string>
    <string name="save_success">save success</string>
    <string name="save_failed">save failed</string>
    <string name="pic_not_changed_message">The picture is not changed.</string>
    <string name="back">Back</string>
    <string name="exit_message">The picture has been changed, exit?</string>
    <string name="brightness">brightness</string>
    <string name="saturation">saturation</string>
    <string name="contrast">contrast</string>
    <string name="style">style:</string>
    <string name="size">size:</string>
    <string name="color">color:</string>
    <string name="style_one">style one</string>
    <string name="style_two">style two</string>
    <string name="style_three">style three</string>
    <string name="choose_color">Choose color</string>

    <string name="filter_whitening">whitening</string>
    <string name="filter_gray">gray</string>
    <string name="filter_lomo">LOMO</string>
    <string name="filter_nostalgia">nostalgia</string>
    <string name="filter_caricature">caricature</string>
    <string name="filter_black_write">black and write</string>
    <string name="filter_negative">negative</string>
    <string name="filter_brown">brown</string>
    <string name="filter_over_exposure">over exposure</string>
    <string name="filter_softness">softness</string>
    <string name="filter_pencil">pencil</string>
    <string name="filter_sketch">sketch</string>
    <string name="filter_carve">carve</string>
    <string name="filter_relief">relief</string>
    <string name="filter_sharpening">sharpening</string>
    <string name="filter_normal">normal</string>

    <string-array name="filter_name">
        <item>@string/filter_normal</item>
        <item>@string/filter_brown</item>
        <item>@string/filter_gray</item>
        <item>@string/filter_lomo</item>
        <item>@string/filter_nostalgia</item>
        <item>@string/filter_pencil</item>
        <item>@string/filter_caricature</item>
    </string-array>

    <integer-array name="filter_type">
        <item>1000</item>
        <item>1310</item>
        <item>1311</item>
        <item>1312</item>
        <item>1313</item>
        <item>1314</item>
        <item>1315</item>
    </integer-array>
</resources>
