<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <include android:id="@+id/top_bar"
        layout="@layout/edit_toolbar"/>

    <LinearLayout
        android:id="@+id/tune_bottom"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/black_alpha30"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="left"
                android:layout_weight="2"
                android:textColor="@color/main_photo_text_color"
                android:layout_width="0dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_height="wrap_content"
                android:text="@string/brightness"/>
            <SeekBar
                android:id="@+id/seek_brightness"
                android:layout_weight="5"
                android:layout_marginLeft="@dimen/content_padding"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="left"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_height="wrap_content"
                android:textColor="@color/main_photo_text_color"
                android:text="@string/saturation"/>
            <SeekBar
                android:id="@+id/seek_saturation"
                android:layout_weight="5"
                android:layout_marginLeft="@dimen/content_padding"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="left"
                android:layout_weight="2"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/main_photo_text_color"
                android:text="@string/contrast"/>
            <SeekBar
                android:id="@+id/seek_contrast"
                android:layout_weight="5"
                android:layout_marginLeft="@dimen/content_padding"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>